--- a/windows/hub/index.yml
+++ b/windows/hub/index.yml
@@ -50,6 +50,18 @@ productDirectory:
       imageSrc: /windows/resources/images/winlogo.svg
       summary: See the system requirements for Windows 11, including running Windows 11 on a virtual machine
       url: /windows/whats-new/windows-11-requirements
+    - title: Compare Windows 11 Editions
+      imageSrc: /windows/resources/images/winlogo.svg
+      summary: Get more information on the edition that's right for your organization
+      url: https://www.microsoft.com/windows/business/compare-windows-11
+    - title: FAQ: Upgrade to Windows 11
+      imageSrc: /windows/resources/images/winlogo.svg
+      summary: See some common questions and answers when upgrading to Windows 11
+      url: https://support.microsoft.com/windows/upgrade-to-windows-11-faq-fb6206a2-1a0f-448a-80f1-8668ee5b2bf9
+    - title: Windows 11 chip to cloud protection: Security challenges of hybrid work
+      imageSrc: /windows/resources/images/winlogo.svg
+      summary: Blog from the Microsoft Windows Security Team
+      url: https://www.microsoft.com/security/blog/2021/10/04/windows-11-offers-chip-to-cloud-protection-to-meet-the-new-security-challenges-of-hybrid-work
     - title: Trusted Platform Module (TPM)
       imageSrc: /windows/resources/images/winlogo.svg
       summary: Learn more about TPM, and why it's a good thing
@@ -135,6 +147,9 @@ conceptualContent:
         - url:  /windows/application-management/remove-provisioned-apps-during-update
           itemType: how-to-guide
           text: Keep removed apps from returning during an update
+        - url:  https://blogs.windows.com/windowsdeveloper/2021/10/04/developing-for-windows-11/
+          itemType: blog
+          text: Blog: Develop apps for Windows 11
 
   # Card
     - title: Client management
