--- a/windows/hub/index.yml
+++ b/windows/hub/index.yml
@@ -58,7 +58,7 @@ productDirectory:
       imageSrc: /windows/resources/images/winlogo.svg
       summary: See some common questions and answers when upgrading to Windows 11
       url: https://support.microsoft.com/windows/upgrade-to-windows-11-faq-fb6206a2-1a0f-448a-80f1-8668ee5b2bf9
-    - title: Windows 11 chip to cloud protection: Security challenges of hybrid work
+    - title: Windows 11 chip to cloud protection - Security challenges of hybrid work
       imageSrc: /windows/resources/images/winlogo.svg
       summary: Blog from the Microsoft Windows Security Team
       url: https://www.microsoft.com/security/blog/2021/10/04/windows-11-offers-chip-to-cloud-protection-to-meet-the-new-security-challenges-of-hybrid-work
@@ -149,7 +149,7 @@ conceptualContent:
           text: Keep removed apps from returning during an update
         - url:  https://blogs.windows.com/windowsdeveloper/2021/10/04/developing-for-windows-11/
           itemType: blog
-          text: Blog: Develop apps for Windows 11
+          text: Blog - Develop apps for Windows 11
 
   # Card
     - title: Client management
