--- a/windows/privacy/toc.yml
+++ b/windows/privacy/toc.yml
@@ -17,7 +17,7 @@
       items: 
         - name: Required Windows 11 diagnostic data events and fields
           href: required-windows-11-diagnostic-events-and-fields.md
-        - name: Windows 10, version 21H1, Windows 10, version 20H2 and Windows 10, version 2004 required Windows diagnostic data events and fields
+        - name:  Windows 10, version 21H2, Windows 10, version 21H1, Windows 10, version 20H2 and Windows 10, version 2004 required Windows diagnostic data events and fields
           href: required-windows-diagnostic-data-events-and-fields-2004.md
         - name: Windows 10, version 1909 and Windows 10, version 1903 required level Windows diagnostic events and fields
           href: basic-level-windows-diagnostic-events-and-fields-1903.md
