--- a/windows/security/threat-protection/auditing/advanced-security-auditing-faq.yml
+++ b/windows/security/threat-protection/auditing/advanced-security-auditing-faq.yml
@@ -16,7 +16,7 @@ metadata:
   ms.collection: M365-security-compliance
   ms.topic: conceptual
   ms.date: 09/06/2021
-  ms.technology: mde
+  ms.technology: windows-sec
     
 title: Advanced security auditing FAQ
 
