--- a/browsers/edge/microsoft-edge-faq.yml
+++ b/browsers/edge/microsoft-edge-faq.yml
@@ -15,7 +15,7 @@ metadata:
     
 title: Frequently Asked Questions (FAQ) for IT Pros
 summary: |
-  Applies to: Microsoft Edge on Windows 10 and Windows 10 Mobile
+  Applies to: Microsoft Edge on Windows 10
   
   > [!NOTE]
   > You've reached the documentation for Microsoft Edge version 45 and earlier. To see the documentation for Microsoft Edge version 77 or later, go to the [Microsoft Edge documentation landing page](/DeployEdge/).
@@ -40,7 +40,7 @@ sections:
           
       - question: How do I customize Microsoft Edge and related settings for my organization?
         answer: |
-          You can use Group Policy or Microsoft Intune to manage settings related to Microsoft Edge, such as security settings, folder redirection, and preferences. See [Group Policy and Mobile Device Management (MDM) settings for Microsoft Edge](./group-policies/index.yml) for a list of policies currently available for Microsoft Edge and configuration information. Note that the preview release of Chromium-based Microsoft Edge might not include management policies or other enterprise functionality; our focus during the preview is modern browser fundamentals.  
+          You can use Group Policy or Microsoft Intune to manage settings related to Microsoft Edge, such as security settings, folder redirection, and preferences. See [Group Policy and Mobile Device Management (MDM) settings for Microsoft Edge](./group-policies/index.yml) for a list of policies currently available for Microsoft Edge and configuration information. The preview release of Chromium-based Microsoft Edge might not include management policies or other enterprise functionality; our focus during the preview is modern browser fundamentals.  
           
       - question: Is Adobe Flash supported in Microsoft Edge?
         answer: |
