--- a/education/windows/TOC.yml
+++ b/education/windows/TOC.yml
@@ -1,3 +1,5 @@
+- name: Windows 11 SE for Education
+  href: windows-11-se-overview.md
 - name: Windows 10 for Education
   href: index.md
   items: 
