added settings.json to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ common/
 .openpublishing.build.mdproj
 .openpublishing.buildcore.ps1
 packages.config
+settings.json
 
 # User-specific files
 .vs/
