--- a/windows/privacy/index.yml
+++ b/windows/privacy/index.yml
@@ -10,7 +10,9 @@ metadata:
   services: windows
   ms.prod: windows
   ms.topic: hub-page # Required
-  ms.collection: M365-security-compliance
+  ms.collection:
+    - M365-security-compliance
+    - highpri
   author: dansimp
   ms.author: dansimp
   manager: dansimp
