--- a/windows/security/information-protection/bitlocker/bitlocker-frequently-asked-questions.yml
+++ b/windows/security/information-protection/bitlocker/bitlocker-frequently-asked-questions.yml
@@ -3,7 +3,6 @@ metadata:
   title: BitLocker FAQ (Windows 10)
   description: Find the answers you need by exploring this brief hub page listing FAQ pages for various aspects of BitLocker.
   ms.assetid: c40f87ac-17d3-47b2-afc6-6c641f72ecee
-  ms.reviewer: 
   ms.prod: w10
   ms.mktglfcycl: explore
   ms.sitesec: library
@@ -13,7 +12,9 @@ metadata:
   ms.author: dansimp
   manager: dansimp
   audience: ITPro
-  ms.collection: M365-security-compliance
+  ms.collection:
+    - M365-security-compliance
+    - highpri
   ms.topic: conceptual
   ms.date: 02/28/2019
   ms.custom: bitlocker
@@ -21,7 +22,7 @@ metadata:
 title: BitLocker frequently asked questions (FAQ) resources
 summary: |
   **Applies to**
-  -   Windows 10
+  -   Windows 10
   
   This topic links to frequently asked questions about BitLocker. BitLocker is a data protection feature that encrypts drives on your computer to help prevent data theft or exposure. BitLocker-protected computers can also delete data more securely when they are decommissioned because it is much more difficult to recover deleted data from an encrypted drive than from a non-encrypted drive.
   
