--- a/windows/security/information-protection/bitlocker/bitlocker-overview-and-requirements-faq.yml
+++ b/windows/security/information-protection/bitlocker/bitlocker-overview-and-requirements-faq.yml
@@ -3,7 +3,6 @@ metadata:
   title: BitLocker overview and requirements FAQ (Windows 10)
   description: This article for IT professionals answers frequently asked questions concerning the requirements to use BitLocker.
   ms.assetid: c40f87ac-17d3-47b2-afc6-6c641f72ecee
-  ms.reviewer: 
   ms.prod: w10
   ms.mktglfcycl: explore
   ms.sitesec: library
@@ -13,7 +12,9 @@ metadata:
   ms.author: dansimp
   manager: dansimp
   audience: ITPro
-  ms.collection: M365-security-compliance
+  ms.collection:
+    - M365-security-compliance
+    - highpri
   ms.topic: conceptual
   ms.date: 07/27/2021
   ms.custom: bitlocker
@@ -21,7 +22,7 @@ metadata:
 title: BitLocker Overview and Requirements FAQ
 summary: |
   **Applies to**
-  -   Windows 10
+  -   Windows 10
   
 
 sections:
