--- a/windows/whats-new/index.yml
+++ b/windows/whats-new/index.yml
@@ -10,10 +10,13 @@ metadata:
   ms.service: windows-10 #Required; service per approved list. service slug assigned to your service by ACOM.
   ms.subservice: subservice
   ms.topic: landing-page # Required
-  ms.collection: windows-10
+  ms.collection:
+    - windows-10
+    - highpri
   author: greg-lindsay #Required; your GitHub user alias, with correct capitalization.
   ms.author: greglin #Required; microsoft alias of author; optional team alias.
   ms.date: 06/24/2021 #Required; mm/dd/yyyy format.
+  manager: dougeby
   localization_priority: medium
     
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | tutorial | video | whats-new
