Created new CSP WindowsAutoplot.md
Created new CSP WindowsAutoplot.md and added :

- WindowsAutoPilot/EnableAgilityPostEnrollment

--- a/windows/client-management/mdm/toc.yml
+++ b/windows/client-management/mdm/toc.yml
@@ -833,6 +833,8 @@ items:
               href: policy-csp-userrights.md
             - name: Wifi
               href: policy-csp-wifi.md
+            - name: WindowsAutoPilot
+              href: policy-csp-windowsautopilot.md
             - name: WindowsConnectionManager
               href: policy-csp-windowsconnectionmanager.md
             - name: WindowsDefenderSecurityCenter
