--- a/windows/security/threat-protection/windows-defender-application-control/TOC.yml
+++ b/windows/security/threat-protection/windows-defender-application-control/TOC.yml
@@ -50,7 +50,7 @@
                   href: create-wdac-policy-for-fully-managed-devices.md
                 - name: Create a WDAC policy for fixed-workload devices
                   href: create-initial-default-policy.md
-                - name: Create a WDAC Deny List
+                - name: Create a WDAC deny list policy
                   href: create-wdac-deny-policy.md
                 - name: Microsoft recommended block rules
                   href: microsoft-recommended-block-rules.md
